# cds-fitstable-rust

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release_cli.yml  test_cli.yml  test_lib.yml
crates/cli/: CHANGELOG.md  COPYING  Cargo.toml  README.md  pyproject.toml
crates/cli/doc/: fitstable.1.txt.tpl  hipsgen.md
crates/cli/resources/: hipsgen.bash
crates/cli/src/: csv.rs  head.rs  info.rs  lib.rs  main.rs  mkhips.rs  mkidx.rs  qhips.rs  qidx.rs  sort.rs  struct.rs
src/: error.rs  lib.rs
src/common/: header.rs  mod.rs  read.rs  write.rs
src/common/keywords/: bitpix.rs  mod.rs  naxis.rs  pgcount.rs  simple.rs  xtension.rs
src/common/keywords/tables/: mod.rs  tcomm.rs  tdminmax.rs  tfields.rs  tnull.rs  tscaltzero.rs  ttype.rs  tucd.rs  tunit.rs
src/common/keywords/tables/bintable/: mod.rs  tdim.rs  tdisp.rs  tform.rs  theap.rs
src/common/keywords/tables/bintable/vot/: mod.rs  ntable.rs  votmeta.rs
src/hdu/: mod.rs
src/hdu/header/: mod.rs  raw.rs
src/hdu/header/builder/: mod.rs
src/hdu/header/builder/impl/: bintable.rs  minimal.rs  mod.rs
src/hdu/primary/: header.rs
src/hdu/xtension/: mod.rs  unknown.rs
src/hdu/xtension/asciitable/: header.rs
src/hdu/xtension/bintable/: field.rs  header.rs  mod.rs  schema.rs
src/hdu/xtension/bintable/read/: bytes.rs  expreval.rs  mod.rs
src/hdu/xtension/bintable/read/deser/: mod.rs  sliceheap.rs
src/hdu/xtension/bintable/read/visitor/: csv.rs  field.rs  mod.rs  primitive.rs
src/hdu/xtension/image/: header.rs
src/read/: hidx.rs  hsort.rs  mod.rs  reader.rs  slice.rs
