[package]
name = "fitstable"
version = "0.1.0"
authors = ["F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"]
edition = "2024"
license = "Apache-2.0 OR MIT"
readme = "README.md"
homepage = "https://github.com/cds-astro/cds-fitstable-rust/"
repository = "https://github.com/cds-astro/cds-fitstable-rust/"

[workspace]
members = [
    "crates/cli"
]

[workspace.dependencies]
log = "0.4"

[dependencies]
log = { workspace = true }
thiserror = "2.0"
votable = { version = "0.6", optional = true }
cdshealpix = { version = "0.7", optional = true }


[features]
default = []
# Supports the FITS-plys format (M. Taylors), i.e. VOTable header in the Primary HDU
all = ["vot", "hpx"]
vot = ["dep:votable"]
hpx = ["dep:cdshealpix"]