[package]
name = "fitstable"
version = "0.1.0"
authors = ["F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"]
edition = "2024"
license = "LGPL"
readme = "README.md"
homepage = "https://github.com/cds-astro/cds-fitstable-rust/"
repository = "https://github.com/cds-astro/cds-fitstable-rust/"

[workspace]
members = [
    "crates/cli"
]

[workspace.dependencies]
log = "0.4"
memmap2 = "0.9"
votable = { version = "0.7", features = ["mivot"] }
cdshealpix = { git = "https://github.com/cds-astro/cds-healpix-rust", rev = "f5e85eb" }
skyregion = { git = "https://github.com/cds-astro/cds-skyregion-rust", features = ["rayon"] }

[dependencies]
log = { workspace = true }
memmap2 = { workspace = true }
votable = { workspace = true, optional = true }
cdshealpix = { workspace = true, optional = true }
skyregion = { workspace = true, optional = true }
thiserror = "2.0"


[features]
default = ["all"]
all = ["vot", "hpx"]
# Supports the FITS-plus format (M. Taylors), i.e. VOTable header in the Primary HDU
vot = ["dep:votable"]
# Supports HEALPix related functions (sort, index, ...)
hpx = ["dep:cdshealpix", "dep:skyregion"]
