[package]
name = "fitstable-cli"
version = "0.1.0"
edition = "2024"
authors = ["F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"]
description = "Command-line tool for fitstable"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities", "science", "data-structures"]
keywords = ["fits"]


[[bin]]
path = "src/main.rs"
name = "fitstable"
bench = false
test = false

[dependencies]
fitstable = { package = "fitstable", path = "../..", features = ["vot"] }
# Handle command lines
clap = { version = "4.5", features = ["derive"] }
# Memmory map a file
memmap2 = "0.9"
# Logging
log = { workspace = true }
env_logger = "0.11"
# Multithreading
num_cpus = "1.17.0"
crossbeam = "0.8"

[target.'cfg(all(target_env = "musl", target_arch = "x86_64"))'.dependencies]
mimalloc = "0.1.43"

