[package]
name = "fitstable-cli"
version = "0.1.0"
edition = "2024"
authors = ["F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"]
description = "Command-line tool for fitstable"
license = "GPL"
readme = "README.md"
categories = ["command-line-utilities", "science", "data-structures"]
keywords = ["fits"]

[features]
default = []
cgi = ["dep:http", "dep:serde_qs"]

[[bin]]
path = "src/main.rs"
name = "fitstable"
bench = false
test = false

[dependencies]
fitstable = { package = "fitstable", path = "../..", features = ["all"] }
votable = { workspace = true }
cdshealpix = { workspace = true }
skyregion = { workspace = true }
moc = "0.19"
bstree-file-readonly = { git = "https://github.com/cds-astro/cds-bstree-file-readonly-rust", rev = "18763b4", default-features = false, features = ["u64_u64"] }
stc-s = "0.1"
# Handle command lines
clap = { version = "4.5", features = ["derive"] }
# Logging
log = { workspace = true }
env_logger = "0.11"
# Memmory map a file
memmap2 = { workspace = true }
# Multithreading
num_cpus = "1.17.0"
crossbeam = "0.8"
# HiPS arguments
serde = { version = "1.0", features = ["derive"] }
jiff = { version = "0.2", features = ["std", "alloc", "serde"] }
toml = "1.0"
# HTTP request parse helper for CGI
http = { version = "1.4", optional = true }
serde_qs = { version = "1.0", optional = true }


[target.'cfg(all(target_env = "musl", target_arch = "x86_64"))'.dependencies]
mimalloc = "0.1.43"

