[package]
name = "fitstable-cli"
version = "0.1.0-beta"
edition = "2024"
authors = ["F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"]
description = "Command-line tool for fitstable, including hipsgen-cat features"
license = "GPL"
readme = "README.md"
categories = ["command-line-utilities", "science", "data-structures"]
keywords = ["fits", "hips"]
documentation = "https://github.com/cds-astro/cds-fitstable-rust/tree/main/crates/cli"
homepage = "https://github.com/cds-astro/cds-fitstable-rust/tree/main/crates/cli"
repository = "https://github.com/cds-astro/cds-fitstable-rust/tree/main/crates/cli"

[features]
default = []
cgi = ["dep:http", "dep:serde_qs"]

[[bin]]
path = "src/main.rs"
name = "fitstable"
bench = false
test = false

[dependencies]
fitstable = { package = "fitstable", path = "../..", features = ["all"] }
votable = { workspace = true }
cdshealpix = { workspace = true }
skyregion = { workspace = true }
moc = "0.19"
bstree-file-readonly = { git = "https://github.com/cds-astro/cds-bstree-file-readonly-rust", rev = "18763b4", default-features = false, features = ["u64_u64"] }
stc-s = "0.1"
# Handle command lines
clap = { version = "4.5", features = ["derive"] }
# Logging
log = { workspace = true }
env_logger = "0.11"
# Memmory map a file
memmap2 = { workspace = true }
# Multithreading
num_cpus = "1.17.0"
crossbeam = "0.8"
# HiPS arguments
serde = { version = "1.0", features = ["derive"] }
jiff = { version = "0.2", features = ["std", "alloc", "serde"] }
toml = "1.0"
# HTTP request parse helper for CGI
http = { version = "1.4", optional = true }
serde_qs = { version = "1.0", optional = true }


[target.'cfg(all(target_env = "musl", target_arch = "x86_64"))'.dependencies]
mimalloc = "0.1.43"

[package.metadata.deb]
maintainer = "F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/fitstable", "usr/bin/fitstable-cli", "755"],
    ["COPYING", "usr/share/doc/fitstable-cli/", "644"],
    ["LICENSE-GPL", "usr/share/doc/fitstable-cli/", "644"],
    ["CHANGELOG.md", "usr/share/doc/fitstable-cli/CHANGELOG", "644"],
    ["README.md", "usr/share/doc/fitstable-cli/README", "644"],
    #["FAQ.md", "usr/share/doc/fitstable-cli/FAQ", "644"],
    ["doc/fitstable.1", "usr/share/man/man1/fitstable-cli.1", "644"],
    # Similarly for shell completions.
    #["deployment/deb/fitstable.bash", "usr/share/bash-completion/completions/fitstable", "644"],
    #["deployment/deb/fitstable.fish", "usr/share/fish/vendor_completions.d/fitstable.fish", "644"],
    #["deployment/deb/_fitstable", "usr/share/zsh/vendor-completions/", "644"],
]
extended-description = """\
fitstable-cli is a command-line to perform operations on FITS tables like
HEALPix sorting and indexation for fast positional queries; or the generation of
HiPS catalogues.
"""
